2003-07-06  Atsushi Enomoto  <ginga@kit.hi-ho.ne.jp>

	* added BuiltInDatatype.cs.
	* XmlSchemaDatatype.cs : [GetType()] added support for some 
	  built-in datatypes.

2003-05-05  Atsushi Enomoto  <ginga@kit.hi-ho.ne.jp>

	* XmlSchemaAnnotation.cs : It depended on incorrect ReadNode().

2003-02-19  Atsushi Enomoto  <ginga@kit.hi-ho.ne.jp>

	* XmlSchemaAnnotation.cs : expect the correct closing tag on <appinfo>
		and <documentation> elements. (patch by Peter Pentchev)
	* XmlSchemaObjectEnumerator.cs : cast properly to XmlSchemaObject 
		instead of XmlSchema. (patch by Peter Pentchev)

2002-07-23  Duncan Mak  <duncan@ximian.com>

	* XmlSchemaException.cs: Partiall implement the ISerializable
	methods. It's not clear now SourceSchemaObject should be deserialized.

2002-07-22  Tim Coleman  <tim@timcoleman.com>
	* XmlSchema.cs: Removed isCompiled which is defined as internal
		in XmlSchemaObject.

2002-06-18  Dwivedi, Ajay kumar <adwiv@yahoo.com>
	
	* XmlSchema: Started work on Validate methods

2002-06-18  Dwivedi, Ajay kumar <adwiv@yahoo.com>
	* XmlSchema: The Read and Write methods are no more [MonoTODO] :)
	
	* XmlSchemaAppInfo: Xml Markup is now being read.
	
	* XmlSchemaDocumentation: Xml Markup is now being read.

	* All: Unhandled attributes are being handled properly.
	       
	* All: Reordered the properties in all cs files to match with MS
	       Implementation. This was required since the order is importatnt
	       for the XmlSerializer.
	
2002-06-14  Dwivedi, Ajay kumar <adwiv@yahoo.com>
	* General: Fixed a few more Bugs

2002-06-10  Dwivedi, Ajay kumar <adwiv@yahoo.com>
	* XmlSchemaReader: A Wrapper class around XmlReader with customized
	  methods to suit reading a schema.
	* General: Implemented Read() method for the schema. There are only
	  a few minor bugs remaining.

2002-05-25  Dwivedi, Ajay kumar <adwiv@yahoo.com>
	* BUGS.txt: New file to keep track of bugs

	* ALL: All classes are initialized exactly as in .NET except