@@ -1,3 +1,8 @@
+2003-07-12  Atsushi Enomoto  <ginga@kit.hi-ho.ne.jp>
+
+	* BuiltInDatatype.cs,
+	  XmlSchemaDatatype.cs : added NOTATION type support.
+
 2003-07-06  Atsushi Enomoto  <ginga@kit.hi-ho.ne.jp>
 
 	* added BuiltInDatatype.cs.
